feat(state): Adding state management for entities
