# backend_reservation_optimizer/src/models/User.js
@@ -1,10 +1,11 @@
 const mongoose = require('mongoose');
-const bcrypt = require('bcryptjs');
 
 const userSchema = new mongoose.Schema({
-    email: { type: String, required: true, unique: true },
-    passwordHash: { type: String, required: true },
-    role: { type: String, enum: ['admin', 'standard_user'], default: 'standard_user' }
+    username: { type: String, required: true, unique: true },
+    passwordHash: { type: String, required: true, select: false },
+    role: { type: String, enum: ['admin', 'standard_user'], default: 'standard_user' },
+    firstName: { type: String, default: '' },
+    lastName: { type: String, default: '' }
 }, { timestamps: true });
 
 userSchema.pre('save', async function(next) {
@@ -13,6 +14,6 @@ userSchema.pre('save', async function(next) {
     }
     next();
 });
-
+    
 const User = mongoose.model('User', userSchema);
 module.exports = User;
